# atuyka

./: CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py  stuff.txt
.github/workflows/: checks.yml  setup-repo.yml
atuyka/: __init__.py  errors.py
atuyka/api/: __init__.py  __main__.py  routes.py
atuyka/services/: __init__.py
atuyka/services/base/: __init__.py  client.py  models.py  paginator.py
atuyka/services/pixiv/: __init__.py  client.py  models.py
atuyka/services/twitter/: __init__.py  client.py  models.py
atuyka/utility/: __init__.py  cache.py  proxy.py  text.py
dev-requirements/: lint.txt  pytest.txt  reformat.txt  setup.py
docs/: conf.py
tests/: __init__.py
tests/services/: test_services.py  test_twitter.py
{{repository_name}}/: __init__.py
